Grupo8/y.output
Gramática

    0 $accept: programa $end

    1 programa: bloque

    2 bloque: bloque sentencia
    3       | sentencia

    4 sentencia: asignacion PUNTO_COMA
    5          | declaracion PUNTO_COMA
    6          | salida PUNTO_COMA
    7          | entrada PUNTO_COMA
    8          | bloqueWhile
    9          | bloqueIf
   10          | expresion PUNTO_COMA

   11 asignacion: ID OP_ASIGNACION expresion
   12           | ID OP_ASIGNACION CONST_STRING

   13 $@1: /* vacío */

   14 funcionContar: CONTAR PAR_ABIERTO expresion $@1 PUNTO_COMA listaConstantes PAR_CERRADO

   15 listaConstantes: COR_ABIERTO constantes COR_CERRADO

   16 constantes: constantes COMA constante
   17           | constante

   18 expresion: expresion OP_SUMA termino
   19          | expresion OP_RESTA termino
   20          | termino

   21 termino: termino OP_MULT factor
   22        | termino OP_DIVISION factor
   23        | factor

   24 factor: ID
   25       | constante
   26       | PAR_ABIERTO expresion PAR_CERRADO
   27       | funcionContar

   28 constante: CONST_BINARIA
   29          | CONST_HEXA
   30          | CONST_REAL
   31          | CONST_ENTERA

   32 declaracion: DIM OP_LE lista_declaracion OP_GE

   33 lista_declaracion: ID COMA lista_declaracion COMA tipoDeDato
   34                  | ID OP_GE AS OP_LE tipoDeDato

   35 tipoDeDato: FLOAT
   36           | INTEGER
   37           | STRING

   38 salida: PUT ID
   39       | PUT CONST_STRING

   40 entrada: GET ID

   41 bloqueWhile: WHILE PAR_ABIERTO condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO
   42            | WHILE PAR_ABIERTO condicion PAR_CERRADO sentencia

   43 bloqueIf: IF PAR_ABIERTO condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO ELSE LLAVE_ABIERTO bloque LLAVE_CERRADO
   44         | IF PAR_ABIERTO condicion PAR_CERRADO sentencia
   45         | IF PAR_ABIERTO condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO

   46 condicion: expLogica OP_AND expLogica
   47          | expLogica OP_OR expLogica
   48          | OP_NOT expLogica
   49          | expLogica

   50 expLogica: PAR_ABIERTO condicion PAR_CERRADO
   51          | expresion comparador expresion

   52 comparador: OP_IGUAL
   53           | OP_LE
   54           | OP_LEQ
   55           | OP_GE
   56           | OP_GEQ
   57           | OP_NE


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
WHILE (258) 41 42
IF (259) 43 44 45
ELSE (260) 43
PUT (261) 38 39
GET (262) 40
DIM (263) 32
AS (264) 34
CONTAR (265) 14
INTEGER (266) 36
FLOAT (267) 35
STRING (268) 37
LLAVE_ABIERTO (269) 41 43 45
LLAVE_CERRADO (270) 41 43 45
PAR_ABIERTO (271) 14 26 41 42 43 44 45 50
PAR_CERRADO (272) 14 26 41 42 43 44 45 50
COR_ABIERTO (273) 15
COR_CERRADO (274) 15
PUNTO_COMA (275) 4 5 6 7 10 14
COMA (276) 16 33
OP_ASIGNACION (277) 11 12
OP_SUMA (278) 18
OP_RESTA (279) 19
OP_DIVISION (280) 22
OP_MULT (281) 21
OP_LE (282) 32 34 53
OP_LEQ (283) 54
OP_GE (284) 32 34 55
OP_GEQ (285) 56
OP_NE (286) 57
OP_IGUAL (287) 52
OP_AND (288) 46
OP_OR (289) 47
OP_NOT (290) 48
CONST_ENTERA (291) 31
CONST_REAL (292) 30
CONST_STRING (293) 12 39
CONST_BINARIA (294) 28
CONST_HEXA (295) 29
ID (296) 11 12 24 33 34 38 40


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
programa (43)
    en la izquierda: 1, en la derecha: 0
bloque (44)
    en la izquierda: 2 3, en la derecha: 1 2 41 43 45
sentencia (45)
    en la izquierda: 4 5 6 7 8 9 10, en la derecha: 2 3 42 44
asignacion (46)
    en la izquierda: 11 12, en la derecha: 4
funcionContar (47)
    en la izquierda: 14, en la derecha: 27
$@1 (48)
    en la izquierda: 13, en la derecha: 14
listaConstantes (49)
    en la izquierda: 15, en la derecha: 14
constantes (50)
    en la izquierda: 16 17, en la derecha: 15 16
expresion (51)
    en la izquierda: 18 19 20, en la derecha: 10 11 14 18 19 26 51
termino (52)
    en la izquierda: 21 22 23, en la derecha: 18 19 20 21 22
factor (53)
    en la izquierda: 24 25 26 27, en la derecha: 21 22 23
constante (54)
    en la izquierda: 28 29 30 31, en la derecha: 16 17 25
declaracion (55)
    en la izquierda: 32, en la derecha: 5
lista_declaracion (56)
    en la izquierda: 33 34, en la derecha: 32 33
tipoDeDato (57)
    en la izquierda: 35 36 37, en la derecha: 33 34
salida (58)
    en la izquierda: 38 39, en la derecha: 6
entrada (59)
    en la izquierda: 40, en la derecha: 7
bloqueWhile (60)
    en la izquierda: 41 42, en la derecha: 8
bloqueIf (61)
    en la izquierda: 43 44 45, en la derecha: 9
condicion (62)
    en la izquierda: 46 47 48 49, en la derecha: 41 42 43 44 45 50
expLogica (63)
    en la izquierda: 50 51, en la derecha: 46 47 48 49
comparador (64)
    en la izquierda: 52 53 54 55 56 57, en la derecha: 51


estado 0

    0 $accept: . programa $end

    WHILE          desplazar e ir al estado 1
    IF             desplazar e ir al estado 2
    PUT            desplazar e ir al estado 3
    GET            desplazar e ir al estado 4
    DIM            desplazar e ir al estado 5
    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 12

    programa       ir al estado 13
    bloque         ir al estado 14
    sentencia      ir al estado 15
    asignacion     ir al estado 16
    funcionContar  ir al estado 17
    expresion      ir al estado 18
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21
    declaracion    ir al estado 22
    salida         ir al estado 23
    entrada        ir al estado 24
    bloqueWhile    ir al estado 25
    bloqueIf       ir al estado 26


estado 1

   41 bloqueWhile: WHILE . PAR_ABIERTO condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO
   42            | WHILE . PAR_ABIERTO condicion PAR_CERRADO sentencia

    PAR_ABIERTO  desplazar e ir al estado 27


estado 2

   43 bloqueIf: IF . PAR_ABIERTO condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO ELSE LLAVE_ABIERTO bloque LLAVE_CERRADO
   44         | IF . PAR_ABIERTO condicion PAR_CERRADO sentencia
   45         | IF . PAR_ABIERTO condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO

    PAR_ABIERTO  desplazar e ir al estado 28


estado 3

   38 salida: PUT . ID
   39       | PUT . CONST_STRING

    CONST_STRING  desplazar e ir al estado 29
    ID            desplazar e ir al estado 30


estado 4

   40 entrada: GET . ID

    ID  desplazar e ir al estado 31


estado 5

   32 declaracion: DIM . OP_LE lista_declaracion OP_GE

    OP_LE  desplazar e ir al estado 32


estado 6

   14 funcionContar: CONTAR . PAR_ABIERTO expresion $@1 PUNTO_COMA listaConstantes PAR_CERRADO

    PAR_ABIERTO  desplazar e ir al estado 33


estado 7

   26 factor: PAR_ABIERTO . expresion PAR_CERRADO

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 35
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21


estado 8

   31 constante: CONST_ENTERA .

    $default  reduce usando la regla 31 (constante)


estado 9

   30 constante: CONST_REAL .

    $default  reduce usando la regla 30 (constante)


estado 10

   28 constante: CONST_BINARIA .

    $default  reduce usando la regla 28 (constante)


estado 11

   29 constante: CONST_HEXA .

    $default  reduce usando la regla 29 (constante)


estado 12

   11 asignacion: ID . OP_ASIGNACION expresion
   12           | ID . OP_ASIGNACION CONST_STRING
   24 factor: ID .

    OP_ASIGNACION  desplazar e ir al estado 36

    $default  reduce usando la regla 24 (factor)


estado 13

    0 $accept: programa . $end

    $end  desplazar e ir al estado 37


estado 14

    1 programa: bloque .
    2 bloque: bloque . sentencia

    WHILE          desplazar e ir al estado 1
    IF             desplazar e ir al estado 2
    PUT            desplazar e ir al estado 3
    GET            desplazar e ir al estado 4
    DIM            desplazar e ir al estado 5
    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 12

    $default  reduce usando la regla 1 (programa)

    sentencia      ir al estado 38
    asignacion     ir al estado 16
    funcionContar  ir al estado 17
    expresion      ir al estado 18
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21
    declaracion    ir al estado 22
    salida         ir al estado 23
    entrada        ir al estado 24
    bloqueWhile    ir al estado 25
    bloqueIf       ir al estado 26


estado 15

    3 bloque: sentencia .

    $default  reduce usando la regla 3 (bloque)


estado 16

    4 sentencia: asignacion . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 39


estado 17

   27 factor: funcionContar .

    $default  reduce usando la regla 27 (factor)


estado 18

   10 sentencia: expresion . PUNTO_COMA
   18 expresion: expresion . OP_SUMA termino
   19          | expresion . OP_RESTA termino

    PUNTO_COMA  desplazar e ir al estado 40
    OP_SUMA     desplazar e ir al estado 41
    OP_RESTA    desplazar e ir al estado 42


estado 19

   20 expresion: termino .
   21 termino: termino . OP_MULT factor
   22        | termino . OP_DIVISION factor

    OP_DIVISION  desplazar e ir al estado 43
    OP_MULT      desplazar e ir al estado 44

    $default  reduce usando la regla 20 (expresion)


estado 20

   23 termino: factor .

    $default  reduce usando la regla 23 (termino)


estado 21

   25 factor: constante .

    $default  reduce usando la regla 25 (factor)


estado 22

    5 sentencia: declaracion . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 45


estado 23

    6 sentencia: salida . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 46


estado 24

    7 sentencia: entrada . PUNTO_COMA

    PUNTO_COMA  desplazar e ir al estado 47


estado 25

    8 sentencia: bloqueWhile .

    $default  reduce usando la regla 8 (sentencia)


estado 26

    9 sentencia: bloqueIf .

    $default  reduce usando la regla 9 (sentencia)


estado 27

   41 bloqueWhile: WHILE PAR_ABIERTO . condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO
   42            | WHILE PAR_ABIERTO . condicion PAR_CERRADO sentencia

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 48
    OP_NOT         desplazar e ir al estado 49
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 50
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21
    condicion      ir al estado 51
    expLogica      ir al estado 52


estado 28

   43 bloqueIf: IF PAR_ABIERTO . condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO ELSE LLAVE_ABIERTO bloque LLAVE_CERRADO
   44         | IF PAR_ABIERTO . condicion PAR_CERRADO sentencia
   45         | IF PAR_ABIERTO . condicion PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 48
    OP_NOT         desplazar e ir al estado 49
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 50
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21
    condicion      ir al estado 53
    expLogica      ir al estado 52


estado 29

   39 salida: PUT CONST_STRING .

    $default  reduce usando la regla 39 (salida)


estado 30

   38 salida: PUT ID .

    $default  reduce usando la regla 38 (salida)


estado 31

   40 entrada: GET ID .

    $default  reduce usando la regla 40 (entrada)


estado 32

   32 declaracion: DIM OP_LE . lista_declaracion OP_GE

    ID  desplazar e ir al estado 54

    lista_declaracion  ir al estado 55


estado 33

   14 funcionContar: CONTAR PAR_ABIERTO . expresion $@1 PUNTO_COMA listaConstantes PAR_CERRADO

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 56
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21


estado 34

   24 factor: ID .

    $default  reduce usando la regla 24 (factor)


estado 35

   18 expresion: expresion . OP_SUMA termino
   19          | expresion . OP_RESTA termino
   26 factor: PAR_ABIERTO expresion . PAR_CERRADO

    PAR_CERRADO  desplazar e ir al estado 57
    OP_SUMA      desplazar e ir al estado 41
    OP_RESTA     desplazar e ir al estado 42


estado 36

   11 asignacion: ID OP_ASIGNACION . expresion
   12           | ID OP_ASIGNACION . CONST_STRING

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_STRING   desplazar e ir al estado 58
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 59
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21


estado 37

    0 $accept: programa $end .

    $default  aceptar


estado 38

    2 bloque: bloque sentencia .

    $default  reduce usando la regla 2 (bloque)


estado 39

    4 sentencia: asignacion PUNTO_COMA .

    $default  reduce usando la regla 4 (sentencia)


estado 40

   10 sentencia: expresion PUNTO_COMA .

    $default  reduce usando la regla 10 (sentencia)


estado 41

   18 expresion: expresion OP_SUMA . termino

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    termino        ir al estado 60
    factor         ir al estado 20
    constante      ir al estado 21


estado 42

   19 expresion: expresion OP_RESTA . termino

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    termino        ir al estado 61
    factor         ir al estado 20
    constante      ir al estado 21


estado 43

   22 termino: termino OP_DIVISION . factor

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    factor         ir al estado 62
    constante      ir al estado 21


estado 44

   21 termino: termino OP_MULT . factor

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 7
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    factor         ir al estado 63
    constante      ir al estado 21


estado 45

    5 sentencia: declaracion PUNTO_COMA .

    $default  reduce usando la regla 5 (sentencia)


estado 46

    6 sentencia: salida PUNTO_COMA .

    $default  reduce usando la regla 6 (sentencia)


estado 47

    7 sentencia: entrada PUNTO_COMA .

    $default  reduce usando la regla 7 (sentencia)


estado 48

   26 factor: PAR_ABIERTO . expresion PAR_CERRADO
   50 expLogica: PAR_ABIERTO . condicion PAR_CERRADO

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 48
    OP_NOT         desplazar e ir al estado 49
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 64
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21
    condicion      ir al estado 65
    expLogica      ir al estado 52


estado 49

   48 condicion: OP_NOT . expLogica

    CONTAR         desplazar e ir al estado 6
    PAR_ABIERTO    desplazar e ir al estado 48
    CONST_ENTERA   desplazar e ir al estado 8
    CONST_REAL     desplazar e ir al estado 9
    CONST_BINARIA  desplazar e ir al estado 10
    CONST_HEXA     desplazar e ir al estado 11
    ID             desplazar e ir al estado 34

    funcionContar  ir al estado 17
    expresion      ir al estado 50
    termino        ir al estado 19
    factor         ir al estado 20
    constante      ir al estado 21
    expLogica      ir al estado 66


estado 50

   18 expresion: expresion . OP_SUMA termino
   19          | expresion . OP_RESTA termino
   51 expLogica: expresion . comparador expresion

    OP_SUMA   desplazar e ir al estado 41
    OP_RESTA  desplazar e ir al estado 42
    OP_LE     desplazar e ir al estado 67
    OP_LEQ    desplazar e ir al estado 68
    OP_GE     desplazar e ir al estado 69
    OP_GEQ    desplazar e ir al estado 70
    OP_NE     desplazar e ir al estado 71
    OP_IGUAL  desplazar e ir al estado 72

    comparador  ir al estado 73


estado 51

   41 bloqueWhile: WHILE PAR_ABIERTO condicion . PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO
   42            | WHILE PAR_ABIERTO condicion . PAR_CERRADO sentencia

    PAR_CERRADO  desplazar e ir al estado 74


estado 52

   46 condicion: expLogica . OP_AND expLogica
   47          | expLogica . OP_OR expLogica
   49          | expLogica .

    OP_AND  desplazar e ir al estado 75
    OP_OR   desplazar e ir al estado 76

    $default  reduce usando la regla 49 (condicion)


estado 53

   43 bloqueIf: IF PAR_ABIERTO condicion . PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO ELSE LLAVE_ABIERTO bloque LLAVE_CERRADO
   44         | IF PAR_ABIERTO condicion . PAR_CERRADO sentencia
   45         | IF PAR_ABIERTO condicion . PAR_CERRADO LLAVE_ABIERTO bloque LLAVE_CERRADO

    PAR_CERRADO  desplazar e ir al estado 77


estado 54

   33 lista_declaracion: ID . COMA lista_declaracion COMA tipoDeDato
   34                  | ID . OP_GE AS OP_LE tipoDeDato

    COMA   desplazar e ir al estado 78
    OP_GE  desplazar e ir al estado 79


estado 55

   32 declaracion: DIM OP_LE lista_declaracion . OP_GE

    OP_GE  desplazar e ir al estado 80


estado 56

   14 funcionContar: CONTAR PAR_ABIERTO expresion . $@1 PUNTO_COMA listaConstantes PAR_CERRADO
   18 expresion: expresion . OP_SUMA termino
   19          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 41
    OP_RESTA  desplazar e ir al estado 42

    $default  reduce usando la regla 13 ($@1)

    $@1  ir al estado 81


estado 57

   26 factor: PAR_ABIERTO expresion PAR_CERRADO .

    $default  reduce usando la regla 26 (factor)


estado 58

   12 asignacion: ID OP_ASIGNACION CONST_STRING .

    $default  reduce usando la regla 12 (asignacion)


estado 59

   11 asignacion: ID OP_ASIGNACION expresion .
   18 expresion: expresion . OP_SUMA termino
   19          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 41
    OP_RESTA  desplazar e ir al estado 42

    $default  reduce usando la regla 11 (asignacion)


estado 60

   18 expresion: expresion OP_SUMA termino .
   21 termino: termino . OP_MULT factor
   22        | termino . OP_DIVISION factor

    OP_DIVISION  desplazar e ir al estado 43
    OP_MULT      desplazar e ir al estado 44

    $default  reduce usando la regla 18 (expresion)


estado 61

   19 expresion: expresion OP_RESTA termino .
   21 termino: termino . OP_MULT factor
   22        | termino . OP_DIVISION factor

    OP_DIVISION  desplazar e ir al estado 43
    OP_MULT      desplazar e ir al estado 44

    $default  reduce usando la regla 19 (expresion)


estado 62

   22 termino: termino OP_DIVISION factor .

    $default  reduce usando la regla 22 (termino)


estado 63

   21 termino: termino OP_MULT factor .

    $default  reduce usando la regla 21 (termino)


estado 64

   18 expresion: expresion . OP_SUMA termino
   19          | expresion . OP_RESTA termino
   26 factor: PAR_ABIERTO expresion . PAR_CERRADO
   51 expLogica: expresion . comparador expresion

    PAR_CERRADO  desplazar e ir al estado 57
    OP_SUMA      desplazar e ir al estado 41
    OP_RESTA     desplazar e ir al estado 42
    OP_LE        desplazar e ir al estado 67
    OP_LEQ       desplazar e ir al estado 68
    OP_GE        desplazar e ir al estado 69
    OP_GEQ       desplazar e ir al estado 70
    OP_NE        desplazar e ir al estado 71
    OP_IGUAL     desplazar e ir al estado 72

    comparador  ir al estado 73


estado 65

   50 expLogica: PAR_ABIERTO condicion . PAR_CERRADO

    PAR_CERRADO  desplazar e ir al estado 82


estado 66

   48 condicion: OP_NOT expLogica .

    $default  reduce usando la regla 48 (condicion)


estado 67

   53 comparador: OP_LE .
